# microblog

./: .env  Dockerfile  README.md  docker-compose.yaml  init-db.sh  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 2024_05_19_1612-5751afb962c6_create_initial_tables.py  2024_06_05_1541-c3ae6313deb5_create_init_tables.py
api/: __init__.py  config.py  dependencies.py  main.py
api/core/: __init__.py  config.py  dbhelper.py
api/db/: __init__.py  database.py  fake_db_data.py  models.py  schemas.py
api/db/db_queries/: __init__.py  likes_qr.py  medias_qr.py  tweets_qr.py  users_qr.py
api/routers/: __init__.py  media.py  router_helpers.py  tweets.py  users.py
confs/nginx/: nginx.conf
tests/: __init__.py  conftest.py  factories.py  overrides_dependencies.py  test_tweets.py
tests/test_api/: __init__.py  test_dependencies.py
tests/test_api/test_routers/: __init__.py  test_media.py  test_tweets.py  test_users.py
tests/test_db_queries/: __init__.py  test_likes_qr.py  test_medias_qr.py  test_tweets_qr.py  test_users_qr.py
tests/test_routers/: test_tweets.py
tests/test_twitter_api/: test_dependencies.py
tests/test_twitter_api/test_routers/: test_media.py  test_tweets.py  test_users.py
twitter_api/: dependencies.py  main.py
twitter_api/core/: __init__.py  config.py  dbhelper.py
twitter_api/db/: __init__.py  fake_db_data.py  models.py  schemas.py
twitter_api/db/db_queries/: likes_qr.py  medias_qr.py  tweets_qr.py  users_qr.py
twitter_api/routers/: media.py  tweets.py  users.py  utils.py
